--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,4 @@ Data/Hiker_Data/72.json
 Program/ATS1_Backup.xlsx
 Program/ATS1_Backup.csv
 Program/my-shelters.xlsx
+.idea/workspace.xml___jb_bak___
