More Web Scraper Updates
More updates to the web scraper, still a work in progress.

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ Program/ATS1_Backup.xlsx
 Program/ATS1_Backup.csv
 Program/my-shelters.xlsx
 .idea/workspace.xml___jb_bak___
+Program/FileManipulation/hikers.csv
